monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4022/A4022b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4022;

grammar A4022b {

  A extends B;

  B extends A;

}
